bundler bootstrap gem

--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,11 @@
 *.rbc
 .bundle
 .config
+.yardoc
+_yardoc
 coverage
-InstalledFiles
-lib/bundler/man
+doc/
+Gemfile.lock
 pkg
 rdoc
 spec/reports
-test/tmp
-test/version_tmp
-tmp
-
-# YARD artifacts
-.yardoc
-_yardoc
-doc/
