--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
+# In order to install old Rubies, we need to use old Ubuntu distibution.
+dist: trusty
 language: ruby
+before_install: gem update bundler
 rvm:
-  - 2.1.1
-  - 2.1.0
+  - 2.7.1
+  - 2.6.6
+  - 2.5.8
+  - 2.4.10
+  - 2.3.8
+  - 2.2.10
+  - 2.1
   - 2.0.0
   - 1.9.3
   - 1.9.2
-  - jruby-19mode
-  - rbx
